# testLinkLibraryNVHPC

./: .gitignore  CMakeLists.txt  README.md
cmake/: compilerOps.cmake
src/: CMakeLists.txt
src/Utils/: CMakeLists.txt  mod_nvtx.F90
src/dummyArrays/: CMakeLists.txt  mod_allocArrays.F90  mod_paramArrays.F90
src/gpuGeometry/: CMakeLists.txt  mod_geometry.F90
src/gpuMathOps/: CMakeLists.txt  mod_vecOps.F90
src/mpiUtils/: CMakeLists.txt  mod_mpi.F90  mod_nvtx.F90
tests/: CMakeLists.txt
tests/unitt/: CMakeLists.txt  test_gpuGeometry.F90
